--- a/_config.yml
+++ b/_config.yml
@@ -27,6 +27,9 @@ category_dir: categories
 code_dir: downloads/code
 i18n_dir: :lang
 skip_render:
+  - '404.html'
+  - 'images/**'
+  - 'scripts/**'
 
 # Writing
 new_post_name: :title.md # File name of new posts
@@ -57,6 +60,7 @@ index_generator:
 default_category: uncategorized
 category_map:
   Code Snippets: code-snippets
+  D3: d3
   Uncategorized: uncategorized
 tag_map:
 
