--- a/_config.yml
+++ b/_config.yml
@@ -30,6 +30,7 @@ skip_render:
   - '404.html'
   - 'images/**'
   - 'scripts/**'
+  - 'demo/**'
 
 # Writing
 new_post_name: :title.md # File name of new posts
